# jalapeno2

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  compileShaders-linux.sh  shaderlog.txt
data/: jalapeno.gltf
data/eoa/: mesh_city.gltf  mesh_construction.gltf  mesh_unit_guy.gltf
data/scg/: README.txt
data/scg/maps/: 1smallmap.bsp
data/shader/: bgfx_shader.sh  common.sh  f_bspmap.sc  f_cubemap.sc  f_quick.sc  f_simple.sc  f_snapshot.sc  f_textured.sc  v_bspmap.sc  v_simple.sc  v_snapshot.sc  v_textured.sc  varying.def.sc
data/totalevo/: cell.gltf
engine/: app.cpp  app.hpp  camera.cpp  camera.hpp  console.cpp  console.hpp  engine.cpp  engine.hpp  filesystem.cpp  filesystem.hpp  input.cpp  input.hpp  mesh.cpp  mesh.hpp  save.cpp  save.hpp  scene.cpp  scene.hpp  shader.cpp  shader.hpp  sound.cpp  sound.hpp  texture.cpp  texture.hpp  ui.cpp  ui.hpp
engine/gns/: gns.cpp  gns.hpp  gnsclient.cpp  gnsserver.cpp  network.hpp
engine/imgui/: custom.cpp  custom.hpp  imgui_impl_bgfx.cpp
jp2empireofages/: building.cpp  building.hpp  empireofages.cpp  eoa.hpp  map.cpp  map.hpp  perlin.c  perlin.h  polity.cpp  polity.hpp
sweetcombatguys/: player.cpp  player.hpp  scg.cpp
test/: test.cpp
totalevo/: brain.cpp  brain.hpp  organism.cpp  organism.hpp  prop.cpp  totalevo.cpp
xtralibs/jpbsp/: collision.cpp  jpbsp.cpp  jpbsp.hpp
